[package]
name = "pibot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
atrium-api = { version = "0.25" }
bsky-sdk = "0.1.16"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
fastrand = "2.3.0"
futures = "0.3.31"
ipld-core = "0.4.2"
jetstream-oxide = { path = "../jetstream-oxide" }
regex = "1.11.1"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_ipld_dagcbor = "0.6.2"
serde_json = "1.0.140"
tokio = {version = "1.44.0", features = ["full"]}
tokio-tungstenite = {version = "0.21", features = ["native-tls"] }
trait-variant = "0.1.2"
